# KleborateModular

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
docs/: Background.rst  Ecoli_MLST.rst  General_Assembly_quality.rst  Home.rst  Klebsiella.rst  Klebsiella_Acquired-virulence-loci.rst  Klebsiella_MLST.rst  Kpsc_Antimicrobial-resistance.rst  Scores-and-counts.rst  Species-detection.rst  Steps-to-Create-a-New-Module-for-Kleborate.rst  Usage.rst  kleboratemodular_Installation.rst  modules.rst
docs/source/:  E. coli_modules.rst  Creating-New-Modules.rst  Creating-a-New-Module-for-Kleborate.rst  Creating-a-New-Modules.rst  Escherichia_modules.rst  General_modules.rst  Installation.rst  Usage.rst  conf.py  index.rst  kosc_modules.rst  kpsc_modules.rst  modules.rst
docs/source/_build/: .buildinfo  Creating-New-Modules.html  Installation.html  Modules.html  Usage.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
kaptive/: assembly.py  misc.py
kleborate/: __main__.py  version.py
kleborate/modules/abst/: abst.py  test_abst.py
kleborate/modules/amr_genotyping/: amr_genotyping.py  kpsc_test_shv.py  test_mgrb_pmrb_amr_genotyping.py  test_omp_amr_genotyping.py  test_qrdr_amr_genotyping.py  test_res_aac_amr_genotyping.py  test_shv_amr_genotyping.py  (+1 more)
kleborate/shared/: alignment.py  misc.py  mlst.py  multi_mlst.py  resMinimap.py  shv_mutations.py  species_defs.py  truncation.py
test/: README.md  test_alignment.py  test_main.py  test_misc.py  test_mlst.py  test_modules.py
test/test_res_mgrb_pmrb/: SRR2098701.fasta
(+171 files in other folders)
